--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
     <link rel="stylesheet" href="//www.chk.asia/static/plugins/bootstrap-5.3.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="//www.chk.asia/static/plugins/fontawesome-free-6.2.1-web/css/all.min.css">
     <link rel="stylesheet" href="//www.chk.asia/static/plugins/font_3878771_1u1xusjlsd7/iconfont.css">
-    <link rel="stylesheet" href="//www.chk.asia/static/css/custom.css">
+    <link rel="stylesheet" href="assets/css/custom.css">
     <link rel="stylesheet" href="assets/css/index.css">
-
+    <style>
+        *{
+            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+        }
+    </style>
 </head>
 
 <body>
