--- a/index.html
+++ b/index.html
@@ -11,11 +11,6 @@
     <link rel="stylesheet" href="//www.chk.asia/static/plugins/font_3878771_1u1xusjlsd7/iconfont.css">
     <link rel="stylesheet" href="assets/css/custom.css">
     <link rel="stylesheet" href="assets/css/index.css">
-    <style>
-        *{
-            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-        }
-    </style>
 </head>
 
 <body>
@@ -31,7 +26,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="//www.chk.asia">返回主页</a>
+                        <a class="nav-link active" aria-current="page" href="/">返回主页</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/about">自我介绍</a>
