--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LED模拟</title>
-    <link rel="stylesheet" href="/static/static/plugins/bootstrap-5.3.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/static/static/plugins/fontawesome-free-6.2.1-web/css/all.min.css">
-    <link rel="stylesheet" href="/static/static/plugins/font_3878771_1u1xusjlsd7/iconfont.css">
+    <link rel="stylesheet" href="//www.chk.asia/static/plugins/bootstrap-5.3.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//www.chk.asia/static/plugins/fontawesome-free-6.2.1-web/css/all.min.css">
+    <link rel="stylesheet" href="//www.chk.asia/static/plugins/font_3878771_1u1xusjlsd7/iconfont.css">
     <link rel="stylesheet" href="assets/css/custom.css">
     <link rel="stylesheet" href="assets/css/index.css">
 </head>
@@ -138,10 +138,16 @@
                         target="_blank" class="footerlink">给我发邮件</a>&nbsp;|
                     <a href="//message.bilibili.com/#/whisper/mid531522938" target="_blank"
                         class="footerlink">B站私信我</a>&nbsp;|
-                    <a href="//space.bilibili.com/531522938" target="_blank" class="footerlink">站长B站</a>
+                    <a href="//space.bilibili.com/531522938" target="_blank" class="footerlink">站长B站</a>|
+                    <a href="https://icp.gov.moe/?keyword=20221503" target="_blank"
+                        style="color: #f400a1;"><b>萌ICP备20229994号</b>
+                    </a>
                 </p>
                 <p style="color: bisque;">Copyright &COPY; 2022-<span id="date"></span> Sgss All Rights Reserved.
-                </p>
+                </p>|
+                <a href="https://icp.gov.moe/?keyword=20221503" target="_blank">
+                    <span style="color: #f400a1;"><b>萌ICP备20229994号</b></span>
+                </a>
                 <script>
                     var d = new Date();
                     var x = document.getElementById("date");
@@ -155,7 +161,7 @@
         function myFunction() {
             var text = document.getElementById("inputtext").value;
             var color = document.getElementById("inputcolor").value;
-            if (color==""){
+            if (color == "") {
                 color = "red";
             }
             document.getElementById("marquee1").innerHTML = text;
@@ -180,9 +186,9 @@
     </script>
     <!-- <script src="assets/js/index.js"></script> -->
     <script src="//unpkg.com/@popperjs/core@2"></script>
-    <script src="/static/static/js/jquery-3.6.3.min.js"></script>
-    <script src="/static/static/plugins/bootstrap-5.3.0/js/bootstrap.min.js"></script>
-    <script src="/static/static/plugins/font_3878771_1u1xusjlsd7/iconfont.js"></script>
+    <script src="//www.chk.asia/static/js/jquery-3.6.3.min.js"></script>
+    <script src="//www.chk.asia/static/plugins/bootstrap-5.3.0/js/bootstrap.min.js"></script>
+    <script src="//www.chk.asia/static/plugins/font_3878771_1u1xusjlsd7/iconfont.js"></script>
 </body>
 
 </html>
