--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LED模拟</title>
-    <link rel="stylesheet" href="//www.chk.asia/static/plugins/bootstrap-5.3.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="//www.chk.asia/static/plugins/fontawesome-free-6.2.1-web/css/all.min.css">
-    <link rel="stylesheet" href="//www.chk.asia/static/plugins/font_3878771_1u1xusjlsd7/iconfont.css">
+    <link rel="stylesheet" href="//www.waterspo.top/static/plugins/bootstrap-5.3.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//www.waterspo.top/static/plugins/fontawesome-free-6.2.1-web/css/all.min.css">
+    <link rel="stylesheet" href="//www.waterspo.top/static/plugins/font_3878771_1u1xusjlsd7/iconfont.css">
     <link rel="stylesheet" href="assets/css/custom.css">
     <link rel="stylesheet" href="assets/css/index.css">
 </head>
@@ -144,7 +144,7 @@
                     </a>
                 </p>
                 <p style="color: bisque;">Copyright &COPY; 2022-<span id="date"></span> Sgss All Rights Reserved.
-                </p>|
+                </p>
                 <script>
                     var d = new Date();
                     var x = document.getElementById("date");
@@ -183,9 +183,9 @@
     </script>
     <!-- <script src="assets/js/index.js"></script> -->
     <script src="//unpkg.com/@popperjs/core@2"></script>
-    <script src="//www.chk.asia/static/js/jquery-3.6.3.min.js"></script>
-    <script src="//www.chk.asia/static/plugins/bootstrap-5.3.0/js/bootstrap.min.js"></script>
-    <script src="//www.chk.asia/static/plugins/font_3878771_1u1xusjlsd7/iconfont.js"></script>
+    <script src="//www.waterspo.top/static/js/jquery-3.6.3.min.js"></script>
+    <script src="//www.waterspo.top/static/plugins/bootstrap-5.3.0/js/bootstrap.min.js"></script>
+    <script src="//www.waterspo.top/static/plugins/font_3878771_1u1xusjlsd7/iconfont.js"></script>
 </body>
 
 </html>
