--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="使用HTML+CSS来模拟LED走字屏" />
+    <meta name="keywords"
+        content="走字屏,LED,模拟LED,铁路" />
     <title>LED模拟</title>
     <link rel="stylesheet" href="//www.waterspo.top/static/plugins/bootstrap-5.3.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="//www.waterspo.top/static/plugins/fontawesome-free-6.2.1-web/css/all.min.css">
