修改颜色选择

--- a/index.html
+++ b/index.html
@@ -79,8 +79,10 @@
         </div>
 
         <div class="input-group mb-3">
-            <span class="input-group-text">要显示的颜色(支持单词,十六进制)：</span>
-            <input type="text" class="form-control" placeholder="Color" id="inputcolor">
+            <!-- <span class="input-group-text">要显示的颜色(支持单词,十六进制)：</span> -->
+            <span class="input-group-text">要显示的颜色：</span>
+            <!-- <input type="text" class="form-control" placeholder="Color" id="inputcolor"> -->
+            <input type="color" class="form-control" value="#FF0000" id="inputcolor" style="height: 40px;">
         </div>
 
         <button type="button" class="btn btn-success" onclick="myFunction()">生成</button>
